<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".sifre_dogrula">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/dogrula"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:id="@+id/bos"
            android:orientation="horizontal"
            android:background="@android:color/holo_blue_bright">
        </LinearLayout>
        <LinearLayout
            android:layout_centerVertical="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
            <TextView
                android:text="@string/textview_dogrula"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:textColor="@android:color/holo_red_dark"
                android:maxLines="2"
                android:id="@+id/text_not"/>
            <EditText
                android:id="@+id/sifre_dogrula"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/et_sifre"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="40dp"
                android:maxLines="1"/>

            <Button
                android:id="@+id/btn_dogrula"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:layout_marginTop="35dp"
                android:background="@drawable/custombutton"
                android:text="@string/btn_dogrula"
                android:textColor="#fffdd0" />

        </LinearLayout>
    </RelativeLayout>
</android.support.constraint.ConstraintLayout>