<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:descendantFocusability="blocksDescendants"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <TextView
                android:text="@string/textview_aciklama"
                android:textSize="16sp"
                android:layout_width="90dp"
                android:layout_height="25dp"
                android:textStyle="bold"
                android:layout_marginRight="2dp"
                />

            <TextView
                android:id="@+id/text_aciklama"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                />
        </LinearLayout>

        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
            android:layout_weight="1"
            android:descendantFocusability="blocksDescendants"
            >
        <TextView
            android:text="@string/textview_kul"
            android:textSize="15sp"
            android:textStyle="bold"
            android:layout_marginTop="4dp"
            android:layout_width="90dp"
            android:layout_height="25dp"
            android:layout_marginRight="2dp"/>
        <TextView
            android:id="@+id/text_kullanici"
            android:textSize="16sp"
            android:layout_width="match_parent"
            android:layout_marginTop="4dp"
            android:layout_height="25dp"
            android:layout_weight="1"
            />

            <ImageView
                android:id="@+id/btn_kullanici"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:focusable="false"
                android:layout_marginTop="4dp"
                android:src="@drawable/copybutton"
                android:layout_marginRight="5dp"
                />
        </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_weight="1"
                android:descendantFocusability="blocksDescendants"
                >
                <TextView
                    android:text="@string/textview_sifre"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:layout_width="90dp"
                    android:layout_height="26dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginRight="2dp"/>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="26dp"
                    android:layout_weight="1"
                    android:focusable="false"
                    app:passwordToggleEnabled="true"
                    >

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/text_sifre"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:focusable="false"
                        android:background="@null"
                        android:inputType="textPassword"
                        android:layout_marginTop="0dp"/>
                </android.support.design.widget.TextInputLayout>
                <ImageView
                    android:id="@+id/btn_sifre"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_marginTop="4dp"
                    android:focusable="false"
                    android:src="@drawable/copybutton"
                    android:clickable="true"
                    android:layout_marginRight="5dp"
                     />
        </LinearLayout>
    </LinearLayout>



</android.support.constraint.ConstraintLayout>